# open3d_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  setup.py
examples/: conv_time.cpp  ex_pc2_subscribe.cpp  ex_pcd_publish.cpp
include/open3d_ros/: open3d_ros.h
src/: example.cpp  o3d_test.cpp  open3d_ros.cpp
src/open3d_ros/: __init__.py  constants.py  functions.py
test/: o3d_ros_tests.cpp  open3d_ros_tests.cpp
