<?xml version="1.0"?>
<package format="2">
  <name>open3d_ros</name>
  <version>0.0.0</version>
  <description>The open3d_ros package</description>

  <maintainer email="matnay@todo.todo">Pranay Mathur</maintainer>
  <maintainer email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</maintainer>

  <license>MIT</license>

  <author email="matnay@todo.todo">Pranay Mathur</author>
  <author email="nkhedekar@nevada.unr.edu">Nikhil Khedekar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
